GNU diffutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 3.6 (2017-05-21) [stable]

** New features

  When one file is a prefix of the other, cmp now appends the shorter
  file's size to the EOF diagnostic.

** Bug fixes

  Using an invalid regular expression with --ignore-matching-lines=RE (-I)
  no longer causes stack overflow.  Before, with an invocation like the
  following, diff would diagnose the error, but would still proceed to
  blow the stack: diff -Ia -I\\ <(echo) <(echo b)
  [bug introduced in 2.9]

  diff no longer mishandles line numbers exceeding 2**31 on Mingw-w64.

  the ---presume-output-tty (ostensibly test-only) option would cause
  diff --color to read an uninitialized variable
  [bug introduced in 3.4]

** Performance changes

  diff's default algorithm has been tweaked to deal better with larger
  files, reversing some of the changes made in diffutils-3.4.


* Noteworthy changes in release 3.5 (2016-08-20) [stable]

** Bug fixes

  diff3 no longer malfunctions due to use-after-free
  [bug introduced in 3.4]

  diff --color no longer colorizes when TERM=dumb


* Noteworthy changes in release 3.4 (2016-08-08) [stable]

** New features

   diff accepts two new options --color and --palette to generate
   and configure colored output.  --color takes an optional argument
   specifying when to colorize a line: --color=always, --color=auto,
   --color=never.  --palette is used to configure which colors are used.

** Bug fixes

  When binary files differ, diff now exits with status 1 as POSIX requires.
  Formerly it exited with status 2.

  Unless the --ignore-file-name-case option is used, diff now
  considers file names to be equal only if they are byte-for-byte
  equivalent.  This fixes a bug where diff in an English locale might
  consider two Asian file names to be the same merely because they
  contain no English characters.
